Fjernet påkrevd felt ytelseskode. Ytelsestype er nå optional, dersom den ikke er med returneres alle ytelsestypene konsument har rett på. Lagt til reqired felter på Ytelse. Sjekk at request inneholder maks 1000 mottakerIder.
